--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,20 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+{% for room in rooms %}
+<div> 
+    <h2>{{ room.title }}</h2>
+    <p>Price: {{ room.price }}</p>
+<img src="{{ asset('images/' ~ room.image) }}" alt="Produit Image Par Défaut" class="w-full h-36 object-cover">
+<div>
+    <a href="{{ path('app_room_show', { 'id': room.id }) }}">Voir détails</a></div> </div> 
+{% endfor %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/Users/thedon/Desktop/reservation salle/roomreservation/src/Controller/HomeController.php</code></li>
-        <li>Your template at <code>/Users/thedon/Desktop/reservation salle/roomreservation/templates/home/index.html.twig</code></li>
-    </ul>
-</div>
+
 {% endblock %}
