--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -124,7 +124,16 @@ header{
         text-align: center;
         .card{
             text-align: start;
-            list-style: none;
+            ul{
+                padding: 0;
+                li{
+                    list-style: none;
+                }
+            }
+        }
+        .row{
+            max-width: 900px;
+            margin: 0 auto;
         }
     }
 }
