--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -39,33 +39,44 @@
 			</div>
 		</form>
 
-        <article class="home__gallery">
-            <h2>Découvrez nos dernières salles :</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, assumenda odit aut nulla, reprehenderit numquam nisi repudiandae sint consequatur distinctio dolorem exercitationem ratione? Molestiae, rem quam illum quod fuga nobis.</p>
+		<article class="home__gallery">
+			<h2>Découvrez nos dernières salles :</h2>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, assumenda odit aut nulla, reprehenderit numquam nisi repudiandae sint consequatur distinctio dolorem exercitationem ratione? Molestiae, rem quam illum quod fuga nobis.</p>
 
-            <div class="row">
-            {% for room in rooms %}
-                <div class="col-6 col-lg-4 p-2">
-                <a href="{{ path('app_room_show', { 'id': room.id }) }}">
-                    <div class="card">
-                        <img src="{{ asset('images/' ~ room.image) }}" class="card-img-top" alt="Salle n°{{ room.id }}">
+			<div
+				class="row">
+				{% for room in rooms %}
+					<div class="col-6 col-lg-4 p-2">
+						<a href="{{ path('app_room_show', { 'id': room.id }) }}">
+							<div class="card">
+								<img src="{{ asset('images/' ~ room.image) }}" class="card-img-top" alt="Salle n°{{ room.id }}">
+				
+								<div class="card-body">
+									<h5 class="card-title">{{ room.title }}</h5>
+									<ul>
+										<li>Lumière naturelle</li>
+										<li>Cuisine équipée</li>
+										<li>Espace extérieur</li>
+									</ul>
+									<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+									<div class="d-flex justify-content-between">
+										<ul>
+                                            <li><small> Min : {{ room.capacity_min }} <i class="bi bi-people"></i></small></li>
+                                            <li><small> Max : {{ room.capacity_max }} <i class="bi bi-people"></i></small></li>
+                                        </ul>
+										<p>
+											<span>{{ room.price }}
+												€</span><br>/jour</p>
+									</div>
+				
+								</div>
+							</div>
+						</a>
+					</div>
+				{% endfor %}
 
-                        <div class="card-body">
-                            <h5 class="card-title">{{ room.title }}</h5>
-                            <ul>
-                                <li>Lumière naturelle</li>
-                                <li>Cuisine équipée</li>
-                                <li>Espace extérieur</li>
-                            </ul>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <div class="d-flex justify-content-between"><a href="#" class="unstyled">Détail</a> <p><span>{{ room.price }} €</span><br>/jour</p></div>
-                            
-                        </div>
-                    </div></a>
-                </div>
-            {% endfor %}
-            </div>
-        </article>
+			</div>
+		</article>
 	</main>
 
 {% endblock %}
