--- a/assets/styles/sass/style.css
+++ b/assets/styles/sass/style.css
@@ -67,8 +67,8 @@ header .nav__container--link span {
 }
 .home__hero--text {
   position: absolute;
-  top: 100px;
-  left: 5%;
+  top: 150px;
+  left: 7%;
   z-index: 1;
   color: white;
   text-align: center;
@@ -77,8 +77,6 @@ header .nav__container--link span {
 }
 @media (min-width: 768px) {
   .home__hero--text {
-    top: 10%;
-    left: 10%;
     width: 80%;
   }
 }
@@ -115,6 +113,9 @@ header .nav__container--link span {
   margin: 50px auto;
   text-align: center;
 }
+.home__gallery a {
+  text-decoration: none;
+}
 .home__gallery .card {
   text-align: start;
 }
@@ -123,6 +124,21 @@ header .nav__container--link span {
 }
 .home__gallery .card ul li {
   list-style: none;
+}
+.home__gallery .card img {
+  height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.home__gallery .card p {
+  text-align: end;
+  font-style: italic;
+}
+.home__gallery .card p span {
+  color: #7BBCB0;
+  font-family: "Volkhov", serif;
+  font-size: 1.2em;
+  font-weight: bold;
 }
 .home__gallery .row {
   max-width: 900px;
