--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -61,9 +61,9 @@
 									{# <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> #}
 									<div class="d-flex justify-content-between">
 										<ul>
-					                                            <li><small> Min : {{ room.capacity_min }} <i class="bi bi-people"></i></small></li>
-					                                            <li><small> Max : {{ room.capacity_max }} <i class="bi bi-people"></i></small></li>
-					                                        </ul>
+					                        <li><small> Min : {{ room.capacityMin }} <i class="bi bi-people"></i></small></li>
+					                        <li><small> Max : {{ room.capacityMax }} <i class="bi bi-people"></i></small></li>
+					                    </ul>
 										<p><span>{{ room.price }} €</span><br>/jour</p>
 									</div>
 								</div>
