--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,7 +8,7 @@
 	<main class="home">
 		<div class="home__hero">
 			<figure class="home__hero--figure">
-				<img src="./images/website/hero.jpg" alt="">
+				<img src="./images/website/hero.jpg" alt="illustration">
 			</figure>
 			<div class="home__hero--text">
 				<h1>Louez les salles correspondants à vos besoins</h1>
@@ -21,8 +21,8 @@
 		<form action="" method="GET" class="home__form">
 			<div class="home__form--content shadow p-3 mb-5 bg-body-tertiary rounded">
 				<div class="home__form--group">
-					<label for="city">Ville / Code postal</label>
-					<input type="text" name="city" id="city" placeholder="Ville ou Code postal">
+					<label for="city">Ville</label>
+					<input type="text" name="city" id="city" placeholder="Ville">
 				</div>
 				<div class="home__form--group">
 					<label for="check_in_date">Date d'entrée</label>
