--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -15,6 +15,8 @@ body{
 
 // NAVBAR
 header{
+    margin: 0;
+    padding: 0;
     position: fixed;
     top: 0;
     z-index: 1;
@@ -152,4 +154,58 @@ header{
             margin: 0 auto;
         }
     }
+}
+.room {
+    margin: 90px 0;
+    &__figure{
+        width: 100%;
+        height: 250px;
+        &--image{
+            object-fit: cover;
+            height: 100%;
+            width: 100%;
+        }
+    }
+    &__content{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        width: 90%;
+        margin: 70px auto;
+        article, form{
+            width: 100%;
+            padding: 40px;
+        }
+        &--header{
+            display: flex;
+            justify-content: space-between;
+            h1{
+                font-size: 1.5em;
+                font-weight: bold;
+            }
+            p{
+                span{
+                    color: $fc_span;
+                    font-family: $ff_title;
+                    font-size: 1.2em;
+                    font-weight: bold;
+                }
+            }
+        }
+        form{
+            background-color:#f3f1f1;
+        }
+    }        
+    @media (min-width: 768px) {
+        &__content{
+            width: 80%;
+        }
+        article{
+            width: 60%;
+        }
+        form{
+            width: 35%;
+        }
+    }
+
 }
