--- a/assets/styles/sass/style.css
+++ b/assets/styles/sass/style.css
@@ -5,6 +5,9 @@ body {
 body h1, body h2, body h3, body h4 {
   font-family: "Volkhov", serif;
 }
+body .accordion-item form {
+  width: 100%;
+}
 
 header {
   margin: 0;
@@ -169,7 +172,7 @@ header .nav__container--link span {
 }
 .room__content article, .room__content form {
   width: 100%;
-  padding: 40px;
+  padding: 40px !important;
 }
 .room__content--header {
   display: flex;
@@ -187,15 +190,114 @@ header .nav__container--link span {
 }
 .room__content form {
   background-color: #f3f1f1;
+  padding: 50px;
+  border: 1px solid rgb(207, 207, 207);
+}
+.room__content form legend {
+  margin: 20px auto;
+  color: #7BBCB0;
+}
+.room__content form .button {
+  display: flex;
+  justify-content: center;
+}
+.room__content--group {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 15px;
+}
+.room__filter {
+  margin: 50px 5%;
+}
+.room__filter--results {
+  padding: 0 50px;
+}
+.room__filter--results a {
+  text-decoration: none;
+  color: inherit;
+}
+.room__filter--card {
+  display: flex;
+  height: 150px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  border: rgba(176, 189, 186, 0.4784313725) 1px solid;
+  background-color: rgba(220, 226, 225, 0.2745098039);
+}
+.room__filter--card:hover {
+  background-color: rgba(220, 226, 225, 0.4431372549);
+  border: rgba(169, 197, 190, 0.6117647059) 1px solid;
+}
+.room__filter--card img {
+  width: 200px;
+  height: 150px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 5px;
+}
+.room__filter--content {
+  padding: 15px 35px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  justify-items: center;
+}
+.room__filter--content .w-20 {
+  width: 20%;
+  text-align: end;
+  margin: auto 0;
+}
+.room__filter--content .w-20 span {
+  color: #7BBCB0;
+  font-family: "Volkhov", serif;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+.room__filter--text {
+  width: 100%;
+}
+.room__filter--text p {
+  font-size: 0.9em;
+  width: 33%;
+}
+.room__filter form {
+  width: 80%;
+}
+.room__filter--form {
+  margin: 30px auto;
+}
+.room__filter--form .button {
+  width: 100%;
+  display: flex;
+  justify-content: end;
+}
+.room__filter--group {
+  width: 100%;
+}
+.room__filter--group label {
+  margin-bottom: 10px;
+  width: 100%;
+}
+.room__filter--group input {
+  margin-bottom: 15px;
+}
+.room__filter--search {
+  display: flex;
+  flex-wrap: nowrap;
+  margin-bottom: 30px;
+}
+.room__filter--search form button {
+  margin-left: 15px;
 }
 @media (min-width: 768px) {
   .room__content {
     width: 80%;
   }
+  .room__content form {
+    width: 35%;
+  }
   .room article {
     width: 60%;
-  }
-  .room form {
-    width: 35%;
   }
 }/*# sourceMappingURL=style.css.map */
