--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -11,6 +11,9 @@ body{
     h1, h2, h3, h4{
         font-family: $ff_title;
     }
+    .accordion-item form{
+        width: 100%;
+    }
 }
 
 // NAVBAR
@@ -174,7 +177,7 @@ header{
         margin: 70px auto;
         article, form{
             width: 100%;
-            padding: 40px;
+            padding: 40px !important;
         }
         &--header{
             display: flex;
@@ -194,17 +197,116 @@ header{
         }
         form{
             background-color:#f3f1f1;
+            padding: 50px;
+            border: 1px solid rgb(207, 207, 207);
+            legend{
+                margin: 20px auto;
+                color: $fc_span;
+            }
+            .button{
+                display: flex;
+                justify-content: center;
+            }
+        }
+        &--group{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            margin-bottom: 15px;
+        }
+    }
+    // PAGE ./room/index.html.twig - URL'/room'
+    &__filter{
+        margin: 50px 5%;
+        &--results{
+            padding: 0 50px;
+            a{
+                text-decoration: none;
+                color: inherit;
+            }
+        }
+        &--card{
+            display: flex;
+            height: 150px;
+            margin-bottom: 15px;
+            border-radius: 5px;
+            border: #b0bdba7a 1px solid;
+            background-color: #dce2e146;
+            &:hover{
+                background-color: #dce2e171;
+                border: #a9c5be9c 1px solid;
+            }
+            img{
+                width: 200px;
+                height: 150px;
+                object-fit: cover;
+                border-radius: 5px;
+            }
+        }
+        &--content{
+            padding: 15px 35px;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            justify-items: center;
+            .w-20{
+                width: 20%;
+                text-align: end;
+                margin: auto 0;
+                span{
+                    color: $fc_span;
+                    font-family: $ff_title;
+                    font-size: 1.2em;
+                    font-weight: bold;
+                }
+            }
+        }
+        &--text{
+            width: 100%;
+            p{
+                font-size: 0.9em;
+                width: 33%;
+            }
+        }
+        form{
+            width: 80%;
+        }
+        &--form{
+            margin: 30px auto;
+            .button{
+                width: 100%;
+                display: flex;
+                justify-content: end;
+            }
+        }
+        &--group{
+            width: 100%;
+            label{
+                margin-bottom: 10px;
+                width: 100%;
+            }
+            input{
+                margin-bottom: 15px;
+            }
+        }
+        &--search{
+            display: flex;
+            flex-wrap: nowrap;
+            margin-bottom: 30px;
+            form button{
+                margin-left: 15px;
+            }
         }
     }        
     @media (min-width: 768px) {
         &__content{
             width: 80%;
+            form{
+                width: 35%;
+            }
         }
         article{
             width: 60%;
-        }
-        form{
-            width: 35%;
         }
     }
 
