--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -46,7 +46,7 @@
                 <i class="bi bi-send"></i> Connexion
             </button>
 
-            <p class="mt-2">Pas encore client ? <a href="">M'inscrire</a></p>
+            <p class="mt-2">Pas encore client ? <a href="{{ path('app_register') }}">M'inscrire</a></p>
         </form>
     </div>
 </main>
